--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.person{
+  width: 800px;
+  border: 2px solid red;
+  padding: 10px ;
+  margin: 10px;
+}
